fixing display issue in ie and overlapping divs when using the search select field

--- a/addon/tailwind/components/bourbon-search-select-field.css
+++ b/addon/tailwind/components/bourbon-search-select-field.css
@@ -1,5 +1,7 @@
 .bourbon-search-select-field {
+  position: relative;
   z-index: 1;
+  padding-right: 10px;
 }
 
 .bourbon-search-select-field__input-container {
