--- a/addon/tailwind/utilities/your-utility.css
+++ b/addon/tailwind/utilities/your-utility.css
@@ -91,3 +91,8 @@ button:focus {
   grid-template-columns: repeat(3, auto);
   grid-gap: 10px;
 }
+
+.bourbon-flex-container {
+  display: flex;
+  display: -ms-flex;
+}
